Added assign-role and revoke-role